--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,18 @@
     "streambuf": "cpp",
     "cinttypes": "cpp",
     "typeinfo": "cpp",
-    "variant": "cpp"
+    "variant": "cpp",
+    "csignal": "cpp",
+    "chrono": "cpp",
+    "forward_list": "cpp",
+    "unordered_set": "cpp",
+    "ratio": "cpp",
+    "fstream": "cpp",
+    "semaphore": "cpp",
+    "span": "cpp",
+    "stop_token": "cpp",
+    "thread": "cpp",
+    "condition_variable": "cpp",
+    "mutex": "cpp"
   }
 }
